# lingua-spanner

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  dev  youdao-web-new-scraping-rules.md
.github/workflows/: build.yml
docs/: feasibility-report.md  requirements.md  word-under-cursor-design.md
package/: metadata.json
package/contents/config/: main.xml
package/contents/lib/LinguaSpannerHelper/: atspi_word_under_cursor.py  lingua_spanner_helper.qmltypes
package/contents/ui/: ConfigGeneral.qml  PasteSelectionHelper.qml  main.qml
package/contents/ui/LinguaSpannerHelper/: lingua_spanner_helper.qmltypes  lingua_spanner_helper_qml_module_dir_map.qrc  qmldir
package/contents/ui/services/: DeepSeekService.qml  FreeDictionaryApiService.qml  SiliconFlowService.qml  YoudaoWebNewService.qml
src/: AtspiCursorReader.cpp  AtspiCursorReader.h  ProcessHelper.cpp  ProcessHelper.h
tests/: diagnostic.qml  tst_ProcessHelper.qml
